--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,11 +23,14 @@ body {
   border-radius: 5px;
   font-size: 18px;
   margin-left: 580px;
-  width: 160px;
+  width: 170px;
   height: 60px;
   color: white;
   padding: 20px;
   cursor: pointer;
+}
+.vertical-center {
+  position: absolute;
 }
 .student{
   width: 30%;
